# yuniframe

./: CMakeLists.txt  README.md  calclinkdeps.cmake  testimgui.cpp
cwgl/src-gles2/: cwgl-gles2-objstr.c  cwgl-gles2-priv.h  cwgl-gles2-s2.c  cwgl-gles2-s3.c  cwgl-gles2-s4.c  cwgl-gles2-s5.c  cwgl-gles2-s6obj.c  cwgl-gles2-s6shader.c  cwgl-gles2-snone.c  cwgl-gles2-vao.c
cwgl/src-tgles2/: cwgl-backend-gles2-priv.h  cwgl-backend-states.h  cwgl-gles2-buffer.c  cwgl-gles2-ctx.c  cwgl-gles2-draw.c  cwgl-gles2-fb.c  cwgl-gles2-mipmap.c  cwgl-gles2-obj.c  cwgl-gles2-queue.c  cwgl-gles2-shader.c  cwgl-gles2-texture.c
cwgl/src-tracker/: cwgl-tracker-init.c  cwgl-tracker-integ.h  cwgl-tracker-objstr.c  cwgl-tracker-priv.h  cwgl-tracker-s2.c  cwgl-tracker-s3.c  cwgl-tracker-s4.c  cwgl-tracker-s5.c  cwgl-tracker-s6obj.c  cwgl-tracker-s6shader.c  cwgl-tracker-snone.c  cwgl-tracker-states.h  cwgl-tracker-vao.c
cwgl/src-vulkan/: cwgl-backend-vk-priv.h  cwgl-vk-buffer.c  cwgl-vk-ctx.c  cwgl-vk-draw.c  cwgl-vk-fb.c  cwgl-vk-mipmap.c  cwgl-vk-obj.c  cwgl-vk-queue.c  cwgl-vk-shader.c  cwgl-vk-texture.c
imgui/: imgui_impl_cwgl.cpp  imgui_impl_yfrm.cpp
include/: cwgl.h  cwgl_enums.h  yfrm.h
include/yuniframe/: yfrm.h
nccc/: CMakeLists.txt  nccc_cwgl.c  nccc_yfrm.c  stub_cwgl.cmake  stub_yfrm.cmake
platform/src-angle/: yfrm-cwgl-angle.c
platform/src-cxx17/: yfrm-fs-cxx17.cpp
platform/src-egl/: yfrm-cwgl-egl.c
platform/src-emscripten/: yfrm-events-emscripten.c
platform/src-gles/: yfrm-cwgl-gles-dummy.c
platform/src-sdl2/: yfrm-audio-sdl2.c  yfrm-ctx-sdl2.c  yfrm-events-sdl2.c  yfrm-fs-sdl2.c  yfrm-main-sdl2.c  yfrm-thr-sdl2.c
platform/src-win/: yfrm-execpath-win32.c  yfrm-gpu-d3d11.c
shxm/include/: shxm.h  shxm_private.h
shxm/src/: shxm_glslang.cpp  shxm_linker.c  shxm_ms_asm0.c  shxm_ms_test0.cpp  shxm_obj.c  shxm_patcher.c  shxm_private.h  shxm_spirv_decomp.c  shxm_spirv_discomp.c  shxm_spirv_reader.c  shxm_spvopt.cpp  shxm_util_buf.c
src-cxx17/: yfrm-fs-cxx17.cpp
src-egl/: yfrm-ctx-egl.c  yfrm-cwgl-egl.c
src-sdl2/: yfrm-ctx-sdl2.c  yfrm-events-sdl2.c  yfrm-main-sdl2.c  yfrm-sync-sdl2.c  yfrm-thr-sdl2.c
src-sdl2/winrt/: SDL2_winrt_main_NonXAML.cpp
src-stdc/: yfrm-main-stdc.c
src-win/: yfrm-execpath-win32.c
